--- a/Test.kata2-fizzbuzz2/Test.kata2-fizzbuzz2.csproj
+++ b/Test.kata2-fizzbuzz2/Test.kata2-fizzbuzz2.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\kata2-fizzbuzz2\kata2-fizzbuzz2.csproj">
+      <Project>{37C9C031-E935-483A-B8BA-E82E80714BCA}</Project>
+      <Name>kata2-fizzbuzz2</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
